--- a/MiningExpansion/Changelog.txt
+++ b/MiningExpansion/Changelog.txt
@@ -1,3 +1,9 @@
+version 0.96.1
+====================================================
+Update for KSP 1.3
+-implements new SpecialistHeatBonus values for drills/converters
+-MaxCooling values updated for drills/converters
+
 Version 0.96
 ===================================================
 KSP 1.22 Update
