--- a/MiningExpansion/Changelog.txt
+++ b/MiningExpansion/Changelog.txt
@@ -1,3 +1,15 @@
+====================================================
+version 0.97
+-Update for KSP 1.3.1
+-Adds Localization support
+-New Part: "Onager" Size 1 Mass Driver
+-New part: "Trebuchet" Size 2 AMss Driver
+-Fixes missing texture on heavy landing leg
+-Adds Size 1 Aircraft Inline Drill
+-Adds Size0 Klaw
+-Mk2 and Size2 Generators now have coreheat
+-Added ELP recycler functionality to Tremor and Terravore Drills 
+
 version 0.96.1
 ====================================================
 Update for KSP 1.3
