--- a/MiningExpansion/Changelog.txt
+++ b/MiningExpansion/Changelog.txt
@@ -1,3 +1,9 @@
+0.97.1
+=====================================================
+-Update for KSP 1.4.1
+-Fixes Onager missing description
+-Adds localization strings for drills/converters
+
 ====================================================
 version 0.97
 -Update for KSP 1.3.1
