--- a/MiningExpansion/Changelog.txt
+++ b/MiningExpansion/Changelog.txt
@@ -1,3 +1,28 @@
+1.1
+===========================================
+KSP 1.9.x update
+-New Part: Vertical landing Gear
+-New part: Shrouded Vertical landing Gear
+-New part: Deployable Rover Wheel
+-New Part: Shrouded 1.25m Inline Deployable Wheel
+-New Part: Shrouded 0.625m inline Deployable Wheel
+-New Part: Radial Klaw
+-New Part: Radial Superheavy landing leg
+-New Part: Anchorable Docking Port
+-New Part: Inflatable Asteroid Crew Can
+-Superheavy Stack leg now has deploy sounds
+-Adds Example Craft
+-Restock Whitelist updated
+-Various parts crash tolerance/bulkhead tags fixed
+
+0.99.4
+=================================================
+KSP 1.8 Update
+-LH2 conversion now needs CryoTanks instead of kerbal Atomics
+-Mk3 Converter now has LH2 option
+-Mk3 converter now has proper bulkhead profile
+-Fixes texture error on size 3 ISRU
+
 0.99.3
 ==============================================
 -Fixes KA patch
